--- a/config/database.yml
+++ b/config/database.yml
@@ -22,4 +22,6 @@ test:
 
 production:
   <<: *default
-  url: <%= ENV['JAWSDB_URL']&.sub('mysql://', 'mysql2://') %>
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
