--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,55 +1,64 @@
-name: RSpec
+name: Ruby Tests
 
-on: 
+on:
   push:
     branches:
+      - main
       - develop
   pull_request:
     branches:
+      - main
       - develop
 
 jobs:
-  rspec:
+  test:
     runs-on: ubuntu-latest
 
-    env:
-      RAILS_ENV: test
-
     steps:
-    - uses: actions/checkout@v3
-
-    - name: Install
-      run: |
-        sudo apt-get update && sudo apt-get install -y curl build-essential git sqlite3 libsqlite3-dev
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
     - name: Set up Ruby
-      uses: ruby/setup-ruby@v1
+      uses: actions/setup-ruby@v1
       with:
         ruby-version: 3.1.2
-        bundler-cache: true
 
-    - name: Restore test results
-      id: 'restore_test_results'
-      uses: actions/cache/restore@v3
+    - name: Set up Node.js
+      uses: actions/setup-node@v1
       with:
-        path: tmp/spec_examples.txt
-        key: ${{ runner.os }}-rspec-examples-${{ github.event.pull_request.number }}-${{ hashFiles('tmp/spec_examples.txt') }}
-        restore-keys: ${{ runner.os }}-rspec-examples-${{ github.event.pull_request.number }}-
+        node-version: 16.20.0
 
-    - name: Run Rspec only failures
+    - name: check dirctory
       run: |
-        if [[ -e tmp/spec_examples.txt && $(grep -c 'failed' tmp/spec_examples.txt) -gt 0 ]]; then
-          grep -E "(example_id)|(---)|(failed)" tmp/spec_examples.txt
-          bundle exec rspec --format progress --only-failures
-        fi
+        pwd
+        bundler -v
 
-    - name: Run RSpec
+    - name: sqlite3 install
       run: |
-        bundle exec rspec
+        sudo apt install libsqlite3-dev
+        gem install sqlite3 -v '1.4.2' --source 'https://rubygems.org/'
+        dpkg -L libsqlite3-dev
 
-    - name: Cache test results
-      if: always()
-      uses: actions/cache/save@v3
+    # Gemキャッシュ
+    - name: Cache gems
+      uses: actions/cache@v2
       with:
-        path: tmp/spec_examples.txt
-        key: ${{ runner.os }}-rspec-examples-${{ github.event.pull_request.number }}-${{ hashFiles('tmp/spec_examples.txt') }}
+        path: vendor/bundle
+        key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-gems-
+
+    - name: Install dependencies
+      run: |
+        gem install bundler
+        bundle install --jobs 4 --retry 3
+        npm install
+
+    - name: database setup
+      run: |
+        mv config/database.org config/database.yml
+        mv config/secrets.org config/secrets.yml
+        bundle exec rails db:migrate RAILS_ENV=test
+
+    - name: Run RSpec tests
+      run: bundle exec rspec
