--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -29,6 +29,14 @@ jobs:
       - name: pg gem の依存関係のインストール
         run: |
           sudo apt-get update; sudo apt-get install libpq-dev
+      - name: Install Chrome
+        run: |
+          LATEST_CHROME=$(wget -qO- https://chromedriver.storage.googleapis.com/LATEST_RELEASE)
+          curl -SL https://chromedriver.storage.googleapis.com/$LATEST_CHROME/chromedriver_linux64.zip > chromedriver.zip
+          unzip chromedriver.zip
+          chmod +x chromedriver
+          sudo mv chromedriver /usr/local/bin/
+          sudo apt-get install google-chrome-stable
       - name: yarn install
         run: |
           yarn install --check-files
