--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -38,6 +38,11 @@ jobs:
       - name: bundler install
         run: |
           bundle check || bundle install --path vendor/bundle --jobs 4 --retry 3
+      - name: webpacker install
+        run: |
+          rm -rf bin/webpack*
+          rails webpacker:install
+          bundle exec rails webpacker:compile
       - name: Setup env
         run: |
           echo "RAILS_ENV=test" >> $GITHUB_ENV
