--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -26,6 +26,10 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: "3.1.2"
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: "16.20.0"
       - name: pg gem の依存関係のインストール
         run: |
           sudo apt-get update; sudo apt-get install libpq-dev
