--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -49,11 +49,14 @@ jobs:
           bundle exec bin/rails webpacker:compile
       - name: Setup env
         run: |
-          echo "RAILS_ENV=test" >> $GITHUB_ENV
+          echo "RAILS_ENV=develop" >> $GITHUB_ENV
           echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> $GITHUB_ENV
       - name: Exec RSpec
         run: |
           bundle exec rspec --format documentation --force-color --backtrace
+        env:
+          GMAIL_ADDRESS: ${{ secrets.GMAIL_ADDRESS }}
+          GMAIL_2FACTOR_PASSWORD: ${{ secrets.GMAIL_2FACTOR_PASSWORD }}
       - name: Exec rubocop
         run: |
           bundle exec rubocop --extra-details --display-style-guide --parallel --display-cop-names
