--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -49,7 +49,7 @@ jobs:
           bundle exec bin/rails webpacker:compile
       - name: Setup env
         run: |
-          echo "RAILS_ENV=develop" >> $GITHUB_ENV
+          echo "RAILS_ENV=test" >> $GITHUB_ENV
           echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> $GITHUB_ENV
       - name: Exec RSpec
         run: |
